[project]
name = "memo"
version = "0.1.0"
description = "MEMO: Memory-Guided Diffusion for Expressive Talking Video Generation"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
keywords = [
    'artificial intelligence',
    'computer vision',
    'diffusion models',
    'video generation',
    'talking head',
]

dependencies = [
    "accelerate>=1.12.0",
    "albumentations>=2.0.8",
    "audio-separator>=0.41.1",
    "black>=26.1.0",
    "diffusers>=0.36.0",
    "einops>=0.8.2",
    "ffmpeg-python>=0.2.0",
    "funasr>=1.3.1",
    "huggingface-hub>=1.4.1",
    "hydra-core>=1.3.2",
    "imageio>=2.37.2",
    "imageio-ffmpeg>=0.6.0",
    "insightface>=0.7.3",
    "jax>=0.6.2",
    "llvmlite>=0.46.0",
    "mediapipe>=0.10.32",
    "modelscope>=1.34.0",
    "moviepy>=2.2.1",
    "numpy>=2.2.6",
    "omegaconf>=2.3.0",
    "onnxruntime-gpu>=1.24.1",
    "opencv-python-headless>=4.13.0.92",
    "pillow>=11.3.0",
    "scikit-learn>=1.7.2",
    "scipy>=1.15.3",
    "torch>=2.10.0",
    "torchaudio>=2.10.0",
    "torchcodec>=0.10.0",
    "torchvision>=0.25.0",
    "tqdm>=4.67.3",
    "transformers>=5.1.0",
    "xformers>=0.0.34",
]

[dependency-groups]
finetune = [
    "decord>=0.6.0",
    "deepspeed>=0.18.5",
    "wandb>=0.24.2",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["memo"]

[tool.ruff]
line-length = 119

[tool.ruff.lint]
# Never enforce `E501` (line length violations).
ignore = ["C901", "E501", "E741", "F402", "F823" ]
select = ["C", "E", "F", "I", "W"]

# Ignore import violations in all `__init__.py` files.
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401", "F403", "F811"]

[tool.ruff.lint.isort]
lines-after-imports = 2
known-first-party = ["vpt_x"]

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"
